--- a/3. Load event data.ipynb
+++ b/3. Load event data.ipynb
@@ -179,100 +179,37 @@
       "File written: raw/events_raw_1960.json !\n",
       "Starting to parse the year 1961...\n",
       "1961: processed 1,430 games.\n",
-      "File written: raw/events_raw_1972.json !\n",
-      "Starting to parse the year 1973...\n",
-      "1973: processed 1,941 games.\n",
-      "File written: raw/events_raw_1973.json !\n",
-      "Starting to parse the year 1974...\n",
-      "1974: processed 1,945 games.\n",
-      "File written: raw/events_raw_1974.json !\n",
-      "Starting to parse the year 1975...\n",
-      "1975: processed 1,934 games.\n",
-      "File written: raw/events_raw_1975.json !\n",
-      "Starting to parse the year 1976...\n",
-      "1976: processed 1,939 games.\n",
-      "File written: raw/events_raw_1976.json !\n",
-      "Starting to parse the year 1977...\n",
-      "1977: processed 2,103 games.\n",
-      "File written: raw/events_raw_1977.json !\n",
-      "Starting to parse the year 1978...\n",
-      "1978: processed 2,102 games.\n",
-      "File written: raw/events_raw_1978.json !\n",
-      "Starting to parse the year 1979...\n",
-      "1979: processed 2,098 games.\n",
-      "File written: raw/events_raw_1979.json !\n",
-      "Starting to parse the year 1980...\n",
-      "1980: processed 2,105 games.\n",
-      "File written: raw/events_raw_1980.json !\n",
-      "Starting to parse the year 1981...\n",
-      "1981: processed 1,394 games.\n",
-      "File written: raw/events_raw_1981.json !\n",
-      "Starting to parse the year 1982...\n",
-      "1982: processed 2,107 games.\n",
-      "File written: raw/events_raw_1982.json !\n",
-      "Starting to parse the year 1983...\n",
-      "1983: processed 2,109 games.\n",
-      "File written: raw/events_raw_1983.json !\n",
-      "Starting to parse the year 1984...\n",
-      "1984: processed 2,105 games.\n",
-      "File written: raw/events_raw_1984.json !\n",
-      "Starting to parse the year 1985...\n",
-      "1985: processed 2,103 games.\n",
-      "File written: raw/events_raw_1985.json !\n",
-      "Starting to parse the year 1986...\n",
-      "1986: processed 2,103 games.\n",
-      "File written: raw/events_raw_1986.json !\n",
-      "Starting to parse the year 1987...\n",
-      "1987: processed 2,105 games.\n",
-      "File written: raw/events_raw_1987.json !\n",
-      "Starting to parse the year 1988...\n",
-      "1988: processed 2,100 games.\n",
-      "File written: raw/events_raw_1988.json !\n",
-      "Starting to parse the year 1989...\n",
-      "1989: processed 2,106 games.\n",
-      "File written: raw/events_raw_1989.json !\n",
-      "Starting to parse the year 1990...\n",
-      "1990: processed 2,105 games.\n",
-      "File written: raw/events_raw_1990.json !\n",
-      "Starting to parse the year 1991...\n",
-      "1991: processed 2,104 games.\n",
-      "File written: raw/events_raw_1991.json !\n",
-      "Starting to parse the year 1992...\n",
-      "1992: processed 2,106 games.\n",
-      "File written: raw/events_raw_1992.json !\n",
-      "Starting to parse the year 1993...\n",
-      "1993: processed 2,269 games.\n",
-      "File written: raw/events_raw_1993.json !\n",
-      "Starting to parse the year 1994...\n",
-      "1994: processed 1,600 games.\n",
-      "File written: raw/events_raw_1994.json !\n",
-      "Starting to parse the year 1995...\n",
-      "1995: processed 2,017 games.\n",
-      "File written: raw/events_raw_1995.json !\n",
-      "Starting to parse the year 1996...\n",
-      "1996: processed 2,267 games.\n",
-      "2007: processed 2,431 games.\n",
-      "File written: raw/events_raw_2007.json !\n",
-      "Starting to parse the year 2008...\n",
-      "2008: processed 2,428 games.\n",
-      "File written: raw/events_raw_2008.json !\n",
-      "Starting to parse the year 2009...\n",
-      "2009: processed 2,430 games.\n",
-      "File written: raw/events_raw_2009.json !\n",
-      "Starting to parse the year 2010...\n",
-      "2010: processed 2,349 games.\n",
-      "File written: raw/events_raw_2010.json !\n",
-      "Starting to parse the year 2011...\n",
-      "2011: processed 2,429 games.\n",
-      "File written: raw/events_raw_2011.json !\n",
-      "Starting to parse the year 2012...\n",
-      "2012: processed 2,430 games.\n",
-      "File written: raw/events_raw_2012.json !\n",
-      "Starting to parse the year 2013...\n",
-      "2013: processed 2,431 games.\n",
-      "File written: raw/events_raw_2013.json !\n",
-      "Starting to parse the year 2014...\n",
-      "2014: processed 2,430 games.\n",
+      "File written: raw/events_raw_1961.json !\n",
+      "Starting to parse the year 1962...\n",
+      "1962: processed 1,617 games.\n",
+      "File written: raw/events_raw_1962.json !\n",
+      "Starting to parse the year 1963...\n",
+      "1963: processed 1,616 games.\n",
+      "File written: raw/events_raw_1963.json !\n",
+      "Starting to parse the year 1964...\n",
+      "1964: processed 1,624 games.\n",
+      "File written: raw/events_raw_1964.json !\n",
+      "Starting to parse the year 1965...\n",
+      "1965: processed 1,613 games.\n",
+      "File written: raw/events_raw_1965.json !\n",
+      "Starting to parse the year 1966...\n",
+      "1966: processed 1,607 games.\n",
+      "2001: processed 2,429 games.\n",
+      "File written: raw/events_raw_2001.json !\n",
+      "Starting to parse the year 2002...\n",
+      "2002: processed 2,426 games.\n",
+      "File written: raw/events_raw_2002.json !\n",
+      "Starting to parse the year 2003...\n",
+      "2003: processed 2,430 games.\n",
+      "File written: raw/events_raw_2003.json !\n",
+      "Starting to parse the year 2004...\n",
+      "2004: processed 2,428 games.\n",
+      "File written: raw/events_raw_2004.json !\n",
+      "Starting to parse the year 2005...\n",
+      "2005: processed 2,431 games.\n",
+      "File written: raw/events_raw_2005.json !\n",
+      "Starting to parse the year 2006...\n",
+      "2006: processed 2,429 games.\n",
       "File written: raw/events_raw_2014.json !\n",
       "Starting to parse the year 2015...\n",
       "2015: processed 2,429 games.\n",
@@ -467,7 +404,7 @@
    "source": [
     "ldf = pandas.DataFrame(ladj_games)\n",
     "bdf = pandas.DataFrame(badj_games)\n",
-    "pdf = pandas.DataFrame(pad"
+    "pdf = pandas.DataFrame(padj_games)"
    ]
   },
   {
