--- a/ruth_and_greenberg.ipynb
+++ b/ruth_and_greenberg.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -100,13 +100,12 @@
     "#     tips.loc[tips['tip'] < 2, 'tip'] *= 2\n",
     "\n",
     "print('\\n')\n",
-    "print('Calculated game in season for both teams')\n",
-    "\n"
+    "print('Calculated game in season for both teams')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -128,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -153,83 +152,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "date                     int64\n",
-       "gameno                   int64\n",
-       "dayofweek               object\n",
-       "visitor                 object\n",
-       "visitor_league          object\n",
-       "visitor_gameno           int64\n",
-       "home                    object\n",
-       "home_league             object\n",
-       "home_gameno              int64\n",
-       "visitor_score            int64\n",
-       "home_score               int64\n",
-       "nOuts                  float64\n",
-       "day_night               object\n",
-       "completed               object\n",
-       "forfeit                 object\n",
-       "protest                 object\n",
-       "parkID                  object\n",
-       "attendance             float64\n",
-       "length                 float64\n",
-       "visitor_linescore       object\n",
-       "home_linescore          object\n",
-       "visitor_ab             float64\n",
-       "visitor_h              float64\n",
-       "visitor_2b             float64\n",
-       "visitor_3b             float64\n",
-       "visitor_hr             float64\n",
-       "visitor_rbi            float64\n",
-       "visitor_sac            float64\n",
-       "visitor_sacfly         float64\n",
-       "visitor_hbp            float64\n",
-       "                        ...   \n",
-       "visitor_batter9_pos    float64\n",
-       "home_batter1_id         object\n",
-       "home_batter1_name       object\n",
-       "home_batter1_pos       float64\n",
-       "home_batter2_id         object\n",
-       "home_batter2_name       object\n",
-       "home_batter2_pos       float64\n",
-       "home_batter3_id         object\n",
-       "home_batter3_name       object\n",
-       "home_batter3_pos       float64\n",
-       "home_batter4_id         object\n",
-       "home_batter4_name       object\n",
-       "home_batter4_pos       float64\n",
-       "home_batter5_id         object\n",
-       "home_batter5_name       object\n",
-       "home_batter5_pos       float64\n",
-       "home_batter6_id         object\n",
-       "home_batter6_name       object\n",
-       "home_batter6_pos       float64\n",
-       "home_batter7_id         object\n",
-       "home_batter7_name       object\n",
-       "home_batter7_pos       float64\n",
-       "home_batter8_id         object\n",
-       "home_batter8_name       object\n",
-       "home_batter8_pos       float64\n",
-       "home_batter9_id         object\n",
-       "home_batter9_name       object\n",
-       "home_batter9_pos       float64\n",
-       "misc                    object\n",
-       "acquisition             object\n",
-       "Length: 161, dtype: object"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "games_df = pandas.read_csv('gamedata.csv', low_memory=False)\n",
     "games_df = games_df.set_index('gameID')\n",
@@ -239,20 +166,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "155\n",
-      "155\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "games_df['date'] = pandas.to_datetime(games_df['date'], format='%Y%m%d', errors='coerce')\n",
     "games_df['year'] = games_df['date'].apply(lambda x: x.year)\n",
@@ -441,45 +359,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Full 1927 and 1938 event data loaded\n",
-      "Selected 1927 Yankees and 1938 Tigers\n",
-      "Data sorted\n",
-      "\n",
-      "\n",
-      "Processing nya1927_df event 1,000...\n",
-      "Processing nya1927_df event 2,000...\n",
-      "Processing nya1927_df event 3,000...\n",
-      "Processing nya1927_df event 4,000...\n",
-      "Processing nya1927_df event 5,000...\n",
-      "Processing nya1927_df event 6,000...\n",
-      "Processing nya1927_df event 7,000...\n",
-      "Processing nya1927_df event 8,000...\n",
-      "Processing nya1927_df event 9,000...\n",
-      "Processing nya1927_df event 10,000...\n",
-      "Processing nya1927_df event 11,000...\n",
-      "Processing nya1927_df event 12,000...\n",
-      "\n",
-      "\n",
-      "Processing det1938_df event 1,000...\n",
-      "Processing det1938_df event 2,000...\n",
-      "Processing det1938_df event 3,000...\n",
-      "Processing det1938_df event 4,000...\n",
-      "Processing det1938_df event 5,000...\n",
-      "\n",
-      "\n",
-      "Calculated game in season for both teams\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "events_df = pandas.read_csv('events_1927_1938.csv', low_memory=False)\n",
     "events_df = events_df.set_index('eventID')\n",
@@ -530,20 +414,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1927 Yankees: event data contains 12,544 events from 155 games.\n",
-      "1938 Tigers: event data contains 5,648 events from 70 games.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print('1927 Yankees: event data contains {0:,.0f} events from {1} games.'.format(len(enya1927_df), len(enya1927_df['gameID'].drop_duplicates())))\n",
     "\n",
@@ -552,19 +427,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['BOS193805030', 'BOS193808280', 'DET193805190', 'DET193805301', 'DET193806140', 'DET193806172', 'DET193806180', 'DET193806220', 'DET193807090', 'DET193807100', 'DET193807260', 'DET193807270', 'DET193807290', 'DET193807301', 'DET193807302', 'DET193808070', 'DET193808192', 'DET193808210', 'DET193809111', 'DET193809120', 'DET193809232', 'DET193809272', 'SLA193804250', 'WS1193805120', 'WS1193808270']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "edet1938_df = edet1938_df.sort_values(['gameID', 'event_in_game'])\n",
     "\n",
