Adding new figures

--- a/baseball_retrosheet/0. Unzip.ipynb
+++ b/baseball_retrosheet/0. Unzip.ipynb
@@ -15,7 +15,7 @@
     {
      "data": {
       "text/plain": [
-       "'/home/idies/workspace/Storage/raddick/baseball/events'"
+       "'/home/idies/workspace/Temporary/raddick/baseball_scratch/events'"
       ]
      },
      "execution_count": 1,
@@ -26,8 +26,8 @@
    "source": [
     "import os\n",
     "import zipfile\n",
-    "events_dir = '/home/idies/workspace/Storage/raddick/baseball/events/'\n",
-    "games_dir = '/home/idies/workspace/Storage/raddick/baseball/games/'\n",
+    "events_dir = '/home/idies/workspace/Temporary/raddick/baseball_scratch/events/'\n",
+    "games_dir = '/home/idies/workspace/Temporary/raddick/baseball_scratch/games/'\n",
     "os.chdir(events_dir)\n",
     "print('ok')\n",
     "os.getcwd()"
@@ -35,16 +35,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Extracting 1900sbox.zip...\n",
+      "Extracting 1910sbox.zip...\n",
+      "Extracting 1920sbox.zip...\n",
       "Extracting 1920seve.zip...\n",
+      "Extracting 1930sbox.zip...\n",
       "Extracting 1930seve.zip...\n",
+      "Extracting 1940sbox.zip...\n",
       "Extracting 1940seve.zip...\n",
+      "Extracting 1950sbox.zip...\n",
       "Extracting 1950seve.zip...\n",
       "Extracting 1960seve.zip...\n",
       "Extracting 1970seve.zip...\n",
@@ -52,6 +58,7 @@
       "Extracting 1990seve.zip...\n",
       "Extracting 2000seve.zip...\n",
       "Extracting 2010seve.zip...\n",
+      "Extracting allas.zip...\n",
       "Done!\n"
      ]
     }
@@ -69,22 +76,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Extracting allpost.zip...\n",
+      "Extracting gl1871_2018.zip...\n",
+      "Extracting glas.zip...\n",
+      "Extracting gldv.zip...\n",
+      "Extracting glwc.zip...\n",
+      "Extracting glws.zip...\n",
       "Done!\n"
      ]
     }
    ],
    "source": [
     "os.chdir(games_dir)\n",
-    "thezip = zipfile.ZipFile('gl1871_2017.zip')\n",
-    "thezip.extractall()\n",
-    "print('Done!')"
+    "filelist = os.listdir()\n",
+    "filelist = sorted(filelist)\n",
+    "#filelist\n",
+    "for thisfile in filelist:\n",
+    "    print('Extracting {0:}...'.format(thisfile))\n",
+    "    thezip = zipfile.ZipFile(thisfile)\n",
+    "    thezip.extractall()\n",
+    "print('Done!')\n"
    ]
   },
   {
